# Ragnarok-Multi-Client-Macro

./: .gitignore  CMakeLists.txt  PersonalRagnarokTool.slnx
.dotnet/.dotnet/: 10.0.200_MachineId.dotnetUserLevelCache  MachineId.v1.dotnetUserLevelCache
4RTools Adjusted/4RTools-main/: 4RTools.csproj  App.config  FodyWeavers.xml  Program.cs  custom_supported_servers.json  packages.config  test.cs
PersonalRagnarokTool/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  PersonalRagnarokTool.csproj
PersonalRagnarokTool.Core/Geometry/: CellMath.cs  CoordinateTranslator.cs  PixelPoint.cs  PolygonMath.cs
PersonalRagnarokTool.Core/Infrastructure/: ObservableObject.cs
PersonalRagnarokTool.Core/Models/: ActionPolygon.cs  AppConfig.cs  AtkDefModeConfig.cs  AutobuffConfig.cs  AutopotConfig.cs  BuffCatalog.cs  ClickDirection.cs  ClientProfile.cs  ClientWindowRef.cs  EffectStatusIds.cs  ExecutionMode.cs  InputMethod.cs  MacroBinding.cs  MacroChainConfig.cs  MacroStep.cs  NormalizedPoint.cs  PixelPoint.cs  ServerConfig.cs  SkillTimerConfig.cs  SpammerConfig.cs  StatusRecoveryConfig.cs  ToggleCombo.cs  TraceSequence.cs  YggAutopotConfig.cs
PersonalRagnarokTool.Core/Properties/: AssemblyInfo.cs
PersonalRagnarokTool.Tests/: PersonalRagnarokTool.Tests.csproj
Source/: ConfigService.cpp  ConfigService.h  Dx11Hook.cpp  Dx11Hook.h  InternalMain.cpp  IpcProtocol.h  MemoryReader.cpp  MemoryReader.h  Menu.cpp  Menu.h  Types.h  VirtualKeyMap.cpp  VirtualKeyMap.h
Tools/: Start Ragnarok Control Deck.bat  build.bat  publish-release.ps1  setup_dependencies.ps1
(+101 files in other folders)
